refactor: SmokingArea, member관련 코드 수정